Fixed alignment of comments

--- a/src/components/catalog/catalog.css
+++ b/src/components/catalog/catalog.css
@@ -8,7 +8,7 @@
 .user-bar{
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 100%;
   margin-bottom: 20px;
 }
 
