--- a/src/components/comment-components/comment-section/comment-section.scss
+++ b/src/components/comment-components/comment-section/comment-section.scss
@@ -19,8 +19,9 @@
     margin-bottom: 20px;
     display: flex;
     height: max-content;
-    min-width:max-content;
-    width: 100%;
+    min-width: 100%;
+    width: max-content;
+    max-width: 100%;
     flex-direction: column;
     align-items:flex-start;
     justify-content: center;
