--- a/src/components/comment-components/comment/comment.scss
+++ b/src/components/comment-components/comment/comment.scss
@@ -4,8 +4,8 @@
     padding: 15px;
     min-width: 50%;
     width: 100%;
+    max-width: 95%;
     white-space: normal;
-    //word-wrap: break-word;
     overflow-wrap: break-word;
     font-family: 'Clibri', sans-serif;
     margin-bottom: 10px;
